--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11174,3 +11174,29 @@ input[type="search"]::-webkit-search-cancel-button {
     border-left:solid 1px #7088AD;
     border-bottom: solid 1px #7088AD;
 }
+
+.Book-item {
+    padding: 10px 0 10px 68px;
+    /*display:-webkit-box;*/
+    border-top: 1px solid #ccc;
+}
+
+.Book-item h2 {
+    font-weight: bold;
+}
+.Book-item .Book_img {
+    position: absolute;
+    left: 10px;
+}
+.Book-item .Book_img img {
+    max-height:60px;
+}
+.Book-item .Book_info{
+    padding-left:5px;
+    font-size:12px;
+}
+
+.x-item-selected{
+    background-color: blue;
+    color:white;
+}
